[APPDEV-2454] Side Cart Redesign - [APPBUG-1462] sidecart button behavior on tablets fix
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@23315 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/common/sidecart.css
+++ b/projects/Media/docroot/assets/css/common/sidecart.css
@@ -24,6 +24,7 @@
   height: 23px;
   overflow: hidden;
   background-image: url(/media_stat/images/navigation/sidecart/sidecart_buttons.png);
+  cursor: pointer;
 }
 
 #sidecartbuttons .buttons a span {
